confs/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-one
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srv-one
            port:
              number: 80
